--- a/css/style.css
+++ b/css/style.css
@@ -222,8 +222,9 @@ header {
 
 .header_right .rocket::before {
     content: '';
+    z-index: -1;
     position: absolute;
-    bottom: -109px;
+    top: 74%;
     left: 50%;
     transform: translateX(-50%);
     width: 32px;
@@ -233,8 +234,9 @@ header {
 
 .header_right .rocket::after {
     content: '';
+    z-index: -1;
     position: absolute;
-    bottom: -109px;
+    top: 74%;
     left: 50%;
     transform: translateX(-50%);
     width: 32px;
@@ -454,7 +456,7 @@ header {
 
 .team__member-info * {
     text-align: center;
-    margin-top: 1.4rem;
+    margin-top: 1rem;
 }
 
 .team__member-info p {
@@ -574,10 +576,11 @@ header {
 .subscribe__container {
     background: var(--color-primary);
     color: var(--color-white);
-    display: flex;
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    gap: 2rem;
     align-items: center;
     padding: 4rem;
-    height: 20rem;
     border-radius: 2rem;
     z-index: 1;
     border: 2px solid;
@@ -590,10 +593,10 @@ header {
 
 .subscribe__text p {
     margin-top: 1rem;
-    width: 90%;
 }
 
 .subscribe__btn {
+    text-align: center;
     border-radius: 1rem;
     box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3);
     z-index: 1;
@@ -641,4 +644,305 @@ footer ul li a:hover {
     margin-top: 4rem;
     padding: 1.2rem 0;
     border-top: 1px solid var(--color-bg2);
+}
+
+
+
+
+/* =================== MEDIA QUERIES (TABLETS) ========================= */
+
+@media screen and (max-width: 1024px) {
+    /* section {
+        padding: 4rem 0;
+    } */
+
+    .container {
+        width: var(--container-width-md);
+    }
+
+    h1 {
+        font-size: 2.2rem;
+    }
+
+    h2 {
+        font-size: 2rem;
+    }
+
+    h3 {
+        font-size: 1.4rem;
+    }
+
+    h4 {
+        font-size: 1rem;
+    }
+
+    /* ======================== NAVBAR ============================ */
+    nav button {
+        display: inline-block;
+        background: transparent;
+        font-size: 1.8rem;
+        color: var(--color-white);
+        cursor: pointer;
+    }
+
+    nav button#close-menu-btn {
+        display: none;
+    }
+
+    .nav__menu {
+        position: fixed;
+        top: 5rem;
+        right: 5%;
+        height: fit-content;
+        width: 15rem;
+        flex-direction: column;
+        gap: 0;
+        display: none;
+    }
+
+    .nav__menu li {
+        width: 100%;
+        height: 3.5rem;
+        animation: animateNavItems 300ms linear forwards;
+        transform-origin: top right;
+        opacity: 0;
+
+        border: 0.1px solid;
+        border-color: var(--color-bg2);
+    }
+
+    .nav__menu li:nth-child(2) {
+        animation-delay: 100ms;
+    }
+
+    .nav__menu li:nth-child(3) {
+        animation-delay: 200ms;
+    }
+
+    .nav__menu li:nth-child(4) {
+        animation-delay: 300ms;
+    }
+
+    .nav__menu li:nth-child(5) {
+        animation-delay: 400ms;
+    }
+
+    .nav__menu li:nth-child(6) {
+        animation-delay: 500ms;
+    }
+
+    .nav__menu li:nth-child(7) {
+        animation-delay: 600ms;
+    }
+
+    .nav__menu li:nth-child(8) {
+        animation-delay: 700ms;
+    }
+
+
+    @keyframes animateNavItems {
+        0% {
+            transform: rotateZ(-90deg) rotateX(90deg) scale(0.1);
+        }
+
+        100% {
+            transform: rotateZ(0) rotateX(0) scale(1);
+            opacity: 1;
+        }
+    }
+
+    .nav__menu li a {
+        background: var(--color-primary);
+        box-shadow: -4rem 6rem 10rem rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        display: grid;
+        place-items: center;
+    }
+
+    .nav__menu li a:hover {
+        background: var(--color-bg2);
+        color: var(--color-white);
+    }
+
+
+    /* =========================== HEADER ========================== */
+    header {
+        height: 65vh;
+        margin-bottom: 5rem;
+    }
+
+    .header__container {
+        gap: 0;
+        padding-bottom: 2rem;
+    }
+
+    /* ============================ GOALS ============================== */
+
+    .golas {
+        height: auto;
+    }
+
+    .golas__container {
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .golas__left {
+        margin-right: 0;
+    }
+
+    /* ============================ EVENT ============================== */
+    .events {
+        margin-top: 0;
+    }
+
+    .events__container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .event:nth-child(3) {
+        display: none;
+    }
+
+    /* ================================ TEAM =================== */
+    .team__container {
+        gap: 1rem;
+    }
+
+    .team__member {
+        padding: 1rem;
+    }
+
+    .team__member-socials a {
+        padding: 0.5rem;
+    }
+
+
+    /* ============================ FAQs ============================== */
+    .faqs__container {
+        grid-template-columns: 1fr;
+    }
+
+
+    /* ========================== SUBSCRIBE =========================== */
+    .subscribe__container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+        text-align: center;
+    }
+
+
+    /* ======================= FOOTER ======================== */
+    .footer__container {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+
+
+/* =================== MEDIA QUERIES (PHONES) ========================= */
+@media screen and (max-width: 600px) {
+    .container {
+        width: var(--container-width-sm);
+    }
+
+
+    /* ======================= NAVBAR ======================== */
+    .nav__menu {
+        right: 3%;
+    }
+
+    /* ======================= HEADER ======================== */
+    header {
+        margin-top: 2rem;
+        height: 100vh;
+    }
+
+    .header__container {
+        grid-template-columns: 1fr;
+        text-align: center;
+        margin-top: 0;
+    }
+
+    .header__left p {
+        margin-bottom: 1.3rem;
+    }
+
+    .header_right star {
+        top: 0;
+    }
+
+    .header_right .rocket {
+        margin-top: 0;
+    }
+
+    /* ======================= GOALS ======================== */
+    .golas__right {
+        gap: 0.7rem;
+    }
+
+    .goal {
+        padding: 1rem;
+        border-radius: 1rem;
+    }
+
+    .goal__icon {
+        margin-top: 3px;
+        display: inline-block;
+    }
+
+    /* ======================= EVENTS ======================== */
+    .events__container {
+        grid-template-columns: 1fr;
+    }
+
+    /* ================================ TEAM =================== */
+    .team__container {
+        grid-template-columns: 1fr 1fr;
+        gap: 0.7rem;
+    }
+
+    .team__member {
+        padding: 0.7rem;
+    }
+
+    .team__member-socials a {
+        padding: 0.5rem;
+    }
+
+    /* ================================ SPONSORS =================== */
+    .sponsor-logo {
+        padding: 5px;
+    }
+
+    .sponsor-logo img {
+        border-radius: 10px;
+    }
+
+
+    /* ================================ FAQs =================== */
+    .faqs__container {
+        gap: 0.5rem;
+    }
+
+    /* ======================= SUBSCRIBE ======================== */
+    .subscribe__container {
+        padding: 2rem;
+    }
+
+    /* ======================= FOOTER ======================== */
+    .footer__container {
+        grid-template-columns: 1fr;
+        text-align: center;
+        gap: 2rem;
+    }
+
+    .footer__1 p {
+        margin: 1rem auto;
+    }
+
+    .footer__socials {
+        justify-content: center;
+    }
 }
