--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ header {
 
 .golas__container {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr;
 }
 
 .golas__left {
@@ -879,7 +879,7 @@ footer ul li a:hover {
 
     /* ======================= GOALS ======================== */
     .golas__right {
-        gap: 0.7rem;
+        gap: 0.5rem;
     }
 
     .goal {
@@ -888,8 +888,17 @@ footer ul li a:hover {
     }
 
     .goal__icon {
-        margin-top: 3px;
+        margin-top: 2px;
+        padding: 8px 10px;
         display: inline-block;
+    }
+
+    .goal h5 {
+        margin: 1rem 0 0.5rem;
+    }
+    
+    .goal p {
+        font-size: 0.8rem;
     }
 
     /* ======================= EVENTS ======================== */
